<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (c) 2012 Mikael Möller, Lund Institute of Technology
* Copyright (c) 2012 Per Sörbris, Lund Institute of Technology
* Copyright (c) 2012-2014 Sony Mobile Communications AB.
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in
* all copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
* THE SOFTWARE.
*/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/connection_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/not_connected_text" />
    <Switch
        android:id="@+id/switchEnableSound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/soundEnabled"
        android:textOff="@string/soundDisabled" />

    <LinearLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
	        android:id="@+id/notificationList"
            android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/createOrOrganizeButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#939393">
            <ImageView
	            android:id="@+id/createNotifications"
	            android:src="@android:drawable/ic_menu_add"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="8dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/organizeNotifications"
                android:src="@android:drawable/ic_menu_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>