<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (c) 2012 Mikael Möller, Lund Institute of Technology
* Copyright (c) 2012 Per Sörbris, Lund Institute of Technology
* Copyright (c) 2012-2014 Sony Mobile Communications AB.
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in
* all copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
* THE SOFTWARE.
*/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/connection_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/not_connected_text" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/smartwatch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SmartWatch wrist location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/smartwatch_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smartwatch_label"
                android:text="Use on right hand" />

            <TextView
                android:id="@+id/customSoundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smartwatch_check"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="Custom sound settings for manual navigation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customSoundForwardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundText"
                android:text="For forward button: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/customSoundForwardEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundForwardText"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:id="@+id/customSoundLeftText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundForwardEdit"
                android:text="For left button: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/customSoundLeftEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundLeftText"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:id="@+id/customSoundStopText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundLeftEdit"
                android:text="For stop button: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/customSoundStopEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundStopText"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:id="@+id/customSoundRightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundStopEdit"
                android:text="For right button: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/customSoundRightEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundRightText"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:id="@+id/customSoundTurnAroundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundRightEdit"
                android:text="For turn around button: "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/customSoundTurnAroundEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSoundTurnAroundText"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/transfer_sound_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/customSoundTurnAroundEdit"
                android:text="@string/camera_view_transfer_sound_feed" />

            <CheckBox
                android:id="@+id/auto_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/transfer_sound_box"
                android:text="@string/camera_view_take_pictures" />

            <TextView
                android:id="@+id/autoPictureIntervalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/auto_box"
                android:text="@string/camera_view_auto_picture_interval_text" />

            <EditText
                android:id="@+id/autoIntervalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:layout_below="@+id/autoPictureIntervalText"
                android:text="@string/camera_view_auto_picture_interval" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>